--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>     
+<head>  
+<meta name="viewport" content="width=device-width">
+<style>
+img {
+    max-width: 100%;
+}
+</style>
 	<meta charset="utf-8"/>
 	<title>Home</title>
 	<link rel="stylesheet" href="main.css">  
