--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	</head>
 	<body style="background-color:black">
 		<div align="center">
-		<h1 style="color:#66e0ff" >PAGE UNDER CONSTRUCTION</h1>
+		<h1 style="color:#66e0ff " >PAGE UNDER CONSTRUCTION</h1>
+		<h1 style="color:#66e0ff " >Full screen for best results</h1>
 		<h2 style="color:#66e0ff"> Formatting may be distorted</h2>
 		<a href = "home.html" style="color:#66e0ff" style="underline:none">>>>Enter?</a>
 	</div>
