--- a/index.html
+++ b/index.html
@@ -123,11 +123,15 @@
 <div class="mainpage" id="aboutinfo">
 	<h2 class="title" >About</h2>
 	<p>
-		okwhateverccontentkjsfshfkjssfjsaljflkfksjflksalfsajf;sajafkjsafjshfkjshflsa</p>
-		<p>hjsahfkjsahfshfkjdshfnmndskjlsahfkjshfshflkshfshfmcxnmzxjdshjskdhfskhfsjf<br>jsfsj
-		hfjksahfkjsahfkjhfkjsahfksajfdlhfuwhfjkahfkjsdhfkjshfkjshfsnfmaf
-		<br>fadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss<br>
-		fdsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+
+		Hello!<br>
+		My name is Tina. This is my personal website for art/music/coding projects.<br>
+		Feel free to look around!</p>
+		<h3>Links</h3>
+		<ul>
+			<li><a href="">Github </a></li>
+			<li><a href="">LinkedIn</a></li>
+		</ul></p>
 	</div>
 
 	<div class="mainpage hidden" id="projectinfo">
