--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		Feel free to look around!</p>
 		<h3>Links</h3>
 		<ul>
-			<li><img url="http://image005.flaticon.com/25/svg/25/25231.svg/" style="width:2%"><a href="">Github </a></li>
+			<li><img src="http://image005.flaticon.com/25/svg/25/25231.svg/" style="width:2%"><a href="">Github </a></li>
 			<li><a href="">LinkedIn</a></li>
 		</ul></p>
 	</div>
