--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 		<h3>Links</h3>
 		<ul>
 			<li><img src="http://image005.flaticon.com/25/svg/25/25231.svg" style="width:2%"><a href="">GitHub </a></li>
-			<li><a href="">LinkedIn</a></li>
+			<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="width:2%>
+			<a href="">LinkedIn</a></li>
 		</ul></p>
 	</div>
 
