--- a/index.html
+++ b/index.html
@@ -137,8 +137,14 @@
 
 	<div class="mainpage hidden" id="projectinfo">
 		<h2 class="title" >Projects</h2>
-		<p>
-			okwhateverccontent</p>
+		<ul>
+			<li><img class = "projectpic" src="cake.png"/>
+				<h3> Cut the Cake<h3>
+
+		<p> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
+			</p>
+		</li>
+	</ul>
 		</div> 
 <div class="mainpage hidden" id = "musicinfo">
 	<h2 class="title">Music</h2>
