--- a/index.html
+++ b/index.html
@@ -129,19 +129,21 @@
 		Feel free to look around!</p>
 		<h3>Links</h3>
 		<ul>
-			<li><img src="http://www.kylerassweiler.ca/static/img/github.png" style="width:2%"><a href="">GitHub </a></li>
+			<li><img src="github.png" style="width:2%"><a href="">GitHub </a></li>
 			<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="width:2%">
 			<a href="">LinkedIn</a></li>
 		</ul></p>
 	</div>
 
 	<div class="mainpage hidden" id="projectinfo">
-		<h2 class="title" >Projects</h2>
+		<h2 class="title" >Projects</h2><br>
 		<ul>
 			<li><img class = "projectpic" src="cake.png"/>
 				<h3> Cut the Cake<h3>
 
 		<p> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
+		<br>
+		__________________________________________________________________________________________
 			</p>
 		</li>
 	</ul>
