--- a/index.html
+++ b/index.html
@@ -143,9 +143,24 @@
 
 		<p> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
 		<br>
-		__________________________________________________________________________________________
+		_____________________________
 			</p>
 		</li>
+		<li><img class = "projectpic" src="ungooder.png"/>
+		<h3>Grammer Ungooder</h3>
+		<p>Do you ever think the internet can't possibly be any stupider?<br>
+
+Prove yourself wrong with this handy app that takes words that have more than one common spelling and swaps them at random!<br>
+<span> <a href = " " style="underline:none">>>Get it in the Chrome web store!</a></span>
+<br>
+		_____________________________
+</p>
+</li>
+<li>
+	<img class = "projectpic" src="SchoolRun.png"/>
+	<p>Help the girl ace all her school exams and projects!<br>
+	<span style = "font-style:italic">Coming soon...</span></p>
+</li>
 	</ul>
 		</div> 
 <div class="mainpage hidden" id = "musicinfo">
