--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
 
 		<p> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
 		<br>
-		_____________________________
+		_____________________________<br>
 			</p>
 		</li>
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
 		<p>Do you ever think the internet can't possibly be any stupider?<br>
 
-Prove yourself wrong with this handy app that takes words that have more than one common spelling and swaps them at random!<br>
+Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br>
 <span> <a href = " " style="underline:none">>>Get it in the Chrome web store!</a></span>
 <br>
-		_____________________________
+		_____________________________<br>
 </p>
 </li>
 <li>
