--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 </p>
 </li>
 <li>
+	<h3>School Run</h3>
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<p>Help the girl ace all her school exams and projects!<br>
 	<span style = "font-style:italic">Coming soon...</span></p>
