--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 			</p>
 		</li>
 		<li><img class = "projectpic" src="ungooder.png"/>
-		<h3>Grammer Ungooder</h3>
-		<p>Do you ever think the internet can't possibly be any stupider?<br>
+		<h3>Grammer Ungooder<br></h3>
+		<p>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br>
 <span> <a href = " " style="underline:none">>>Get it in the Chrome web store!</a></span>
@@ -157,7 +157,7 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 </p>
 </li>
 <li>
-	<h3>School Run</h3>
+	<h3>School Run<br></h3>
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<p>Help the girl ace all her school exams and projects!<br>
 	<span style = "font-style:italic">Coming soon...</span></p>
