--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<li><img class = "projectpic" src="cake.png"/>
 				<h3> Cut the Cake<h3>
 
-		<p> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
+		<p style="text-style:none"> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
 		<br>
 		_____________________________<br>
 			</p>
@@ -149,7 +149,7 @@
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
 		
-		<p>Do you ever think the Internet can't possibly be any worse?<br>
+		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br>
 <span> <a href = " " style="underline:none">>>Get it in the Chrome web store!</a></span>
@@ -162,7 +162,7 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<h3>School Run</h3>
 	
-	<p>Help the girl ace all her school exams and projects!<br>
+	<p><br>Help the girl ace all her school exams and projects!<br>
 	<span style = "font-style:italic">Coming soon...</span></p>
 </li>
 	</ul>
