--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<li><img class = "projectpic" src="cake.png"/>
 				<h3> Cut the Cake<h3>
 
-		<p style="text-style:none"> How good are you at cutting cakes?<br> <span> <a href = " " style="underline:none">>>Take the Challenge!</a></span>
+		<p style="text-style:none"> How good are you at cutting cakes?<br> <span> <button><a href = " " style="underline:none">>>Take the Challenge!</a></button></span>
 		<br>
 		_____________________________<br>
 			</p>
@@ -152,7 +152,7 @@
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br>
-<span> <a href = " " style="underline:none">>>Get it in the Chrome web store!</a></span>
+<span> <button><a href = " " style="underline:none">>>Get it in the Chrome web store!</a></button></span>
 <br>
 		_____________________________<br>
 </p>
@@ -163,7 +163,7 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 	<h3>School Run</h3>
 	
 	<p><br>Help the girl ace all her school exams and projects!<br>
-	<span style = "font-style:italic">Coming soon...</span></p>
+	<span style = "font-style:italic"><button>Coming soon...</button></span></p>
 </li>
 	</ul>
 		</div> 
