--- a/index.html
+++ b/index.html
@@ -141,29 +141,25 @@
 			<li><img class = "projectpic" src="cake.png"/>
 				<h3> Cut the Cake<h3>
 
-		<p style="text-style:none"> How good are you at cutting cakes?<br> <span> <button><a href = " " style="underline:none">>>Take the Challenge!</a></button></span>
-		<br>
-		_____________________________<br>
-			</p>
+		<p style="text-style:none"> How good are you at cutting cakes?<br></p>
+		<<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
 		</li>
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
 		
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
-Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br>
-<span> <button><a href = " " style="underline:none">>>Get it in the Chrome web store!</a></button></span>
+Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br></p>
+<button><a href = " " style="underline:none">>>Get it in the Chrome web store!</a></button>
 <br>
-		_____________________________<br>
-</p>
 </li>
 <li>
 	
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<h3>School Run</h3>
 	
-	<p><br>Help the girl ace all her school exams and projects!<br>
-	<span style = "font-style:italic"><button>Coming soon...</button></span></p>
+	<p><br>Help the girl ace all her school exams and projects!<br></p>
+<button><span style = "font-style:italic">Coming soon...</span></button>
 </li>
 	</ul>
 		</div> 
