--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<h3> Cut the Cake<h3>
 
 		<p style="text-style:none"> How good are you at cutting cakes?<br></p>
-		<<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
+		<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
 		</li>
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
