--- a/index.html
+++ b/index.html
@@ -138,18 +138,19 @@
 	<div class="mainpage hidden" id="projectinfo">
 		<h2 class="title" >Projects</h2><br>
 		<ul>
-			<li><img class = "projectpic" src="cake.png"/>
-				<h3> Cut the Cake<h3>
-
-		<p style="text-style:none"> How good are you at cutting cakes?<br></p>
-		<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
-		</li>
+		<li><img class = "projectpic" src="cake.png"/>
+		<h3>Cut the Cake</h3>
+	
+		<p><br>How good are you at cutting cakes?<br></p>
+<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
+<br>
+</li>
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
 		
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
-Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br></p>
+Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br><br></p>
 <button><a href = " " style="underline:none">>>Get it in the Chrome web store!</a></button>
 <br>
 </li>
@@ -158,7 +159,7 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<h3>School Run</h3>
 	
-	<p><br>Help the girl ace all her school exams and projects!<br></p>
+	<p><br>Help the girl ace all her school exams and projects!<br><br></p>
 <button><span style = "font-style:italic">Coming soon...</span></button>
 </li>
 	</ul>
