--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<li><img class = "projectpic" src="cake.png"/>
 		<h3>Cut the Cake</h3>
 	
-		<p><br>How good are you at cutting cakes?<br></p>
+		<p><br>How good are you at cutting cakes?<br><br></p>
 <button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
 <br>
 </li>
