--- a/index.html
+++ b/index.html
@@ -142,23 +142,20 @@
 		<h3>Cut the Cake</h3>
 	
 		<p><br>How good are you at cutting cakes?<br><br></p>
-<button><a href = " " style="underline:none">>>Take the Challenge!</a></button>
+<a href = " " style="underline:none">>>Take the Challenge!</a>
 <br>
 </li>
 		<li><img class = "projectpic" src="ungooder.png"/>
 		<h3>Grammer Ungooder</h3>
-		
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br><br></p>
-<button><a href = " " style="underline:none">>>Get it in the Chrome web store!</a></button>
+<a href = " " style="underline:none">>>Get it in the Chrome web store!</a>
 <br>
 </li>
 <li>
-	
 	<img class = "projectpic" src="SchoolRun.png"/>
 	<h3>School Run</h3>
-	
 	<p><br>Help the girl ace all her school exams and projects!<br><br></p>
 <button><span style = "font-style:italic">Coming soon...</span></button>
 </li>
