--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		<h3>Cut the Cake</h3>
 	
 		<p><br>How good are you at cutting cakes?<br><br></p>
-<a href = " " style="underline:none">>>Take the Challenge!</a>
+<button><a href = " " style="underline:none; color:black;">>>Take the Challenge!</a></button>
 <br>
 </li>
 		<li><img class = "projectpic" src="ungooder.png"/>
@@ -150,7 +150,7 @@
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br><br></p>
-<a href = " " style="underline:none">>>Get it in the Chrome web store!</a>
+<button><a href = " " style="underline:none;color:black;">>>Get it in the Chrome web store!</a></button>
 <br>
 </li>
 <li>
