--- a/index.html
+++ b/index.html
@@ -163,7 +163,21 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 		</div> 
 <div class="mainpage hidden" id = "musicinfo">
 	<h2 class="title">Music</h2>
-	<p>Original compositions for projects and games</p>
+	<p>Original compositions for projects and games<br>
+	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+	<ul>
+		<li><h3>Afternoon Bakery</h3></li>
+		<li><audio controls>
+			<source src="gdc.mp3" type="audio/mpeg">
+			
+		</audio></li>
+		<li>Noname</li>
+		<li><audio controls>
+			<source src="VN_SONG_1.mp3" type="audio/mpeg">
+		</audio></li>
+		
+	</ul>
+	
 </div>
 	</body>
 
