--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ Prove yourself wrong with this handy app that takes words that have<br> more tha
 		</div> 
 <div class="mainpage hidden" id = "musicinfo">
 	<h2 class="title">Music</h2>
-	<p>Original compositions for projects and games<br>
-	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+	<h3>Original compositions for projects and games</h3>
+	<p>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
 	<ul>
 		<li><h3>Afternoon Bakery</h3></li>
 		<li><audio controls>
