--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 		Feel free to look around!</p>
 		<h3>Links</h3>
 		<ul>
-			<li><img src="github.png" style="width:2%"><a href="https://github.com/tinaq">GitHub</a></li>
+			<li><img src="github.png" style="width:2%"><a href="https://github.com/tinaq" target="_blank">GitHub</a></li>
 			<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="width:2%">
-			<a href="https://www.linkedin.com/in/tina-qian-9a879910a?trk=hp-identity-name">LinkedIn</a></li>
+			<a href="https://www.linkedin.com/in/tina-qian-9a879910a?trk=hp-identity-name" target="_blank">LinkedIn</a></li>
 		</ul></p>
 	</div>
 
@@ -142,7 +142,7 @@
 		<h3>Cut the Cake</h3>
 	
 		<p><br>How good are you at cutting cakes?<br><br></p>
-<button><a href = "http://stratfordwall.github.io/gdc2016/fraction-hero/" style="underline:none; color:black;">>>Take the Challenge!</a></button>
+<button><a href = "http://stratfordwall.github.io/gdc2016/fraction-hero/" style="underline:none; color:black;" target="_blank">>>Take the Challenge!</a></button>
 <br>
 </li>
 		<li><img class = "projectpic" src="ungooder.png"/>
@@ -150,7 +150,7 @@
 		<p><br>Do you ever think the Internet can't possibly be any worse?<br>
 
 Prove yourself wrong with this handy app that takes words that have<br> more than one common spelling and swaps them at random!<br><br></p>
-<button><a href = "https://chrome.google.com/webstore/detail/grammer-ungooder/dnefmfcaboiimmkibdjbnciggbfpeeco " style="underline:none;color:black;">>>Get it in the Chrome web store!</a></button>
+<button><a href = "https://chrome.google.com/webstore/detail/grammer-ungooder/dnefmfcaboiimmkibdjbnciggbfpeeco " style="underline:none;color:black;" target="_blank">>>Get it in the Chrome web store!</a></button>
 <br>
 </li>
 <li>
