--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
 <div class="mainpage" id="aboutinfo">
 	<h2 class="title" >About</h2>
+	<h3>**Please enable JavaScript popups</h3>
 	<p>
 
 		Hello!<br>
